# bbdd_ii_practica

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
cassandra/: README copy.md  README.md  design.md  docker-compose.yml  export_queries.sql  load.cql  load_horde_data.py  pyproject.toml  read_and_write.cql
cassandra/docs/: 01-enunciado.md  02-analisis.md  03-solucion-v2.md  03-solucion.md  README.md
editor_niveles/: README.md
editor_niveles/sources/: collaborative_filtering.ipynb
leaderboards/: README.md  export_queries.sql  load.cql  read_and_write.cql
milvus/: .env.template  README.md  docker-compose.yml
milvus/dockerimg/: Dockerfile
milvus/jupyter_volume/: 1_carga_datos.ipynb  2_image_workflow.ipynb  3_pruebas_rendimiento.ipynb  avatar_search.ipynb  clip_embeddings_generator.py  utils.py
mongo/: QUERIES FALTANTES.txt  README.md  docker-compose.yml  load_data.py  queries_hints.ipynb  queries_mongo.ipynb
mysql/: docker-compose.yml
mysql/data/: bbdd2_cassandra_d.sql
neo4j/: .env.template  README.md  docker-compose-windows.yml  docker-compose.yml  queries.md
neo4j/import/: dungeons.dump
neo4j/sources/: Untitled.ipynb  collaborative_filtering.ipynb  listado_mazmorras.html  minimapa_mazmorra.html  queries.ipynb  visualization jorge.ipynb  visualization pablo.ipynb  visualization.ipynb
practica_cassandra/: export_queries.sql  load.cql  practica.md
recomendacion_avatares/: docker-compose.yml
sql/: bbdd2_cassandra.sql
src/: __init__.py
wiki/: QUERIES FALTANTES.txt  README.md  queries_mongo.ipynb
(+4 files in other folders)
