[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pabloo22 <pablo.arino22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cassandra-driver = "^3.29.1"
pymongo = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
